fix: update remix docs from catch boundary to error boundary

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -40,8 +40,14 @@
       ["Restrictions", "/authentication/configuration/restrictions"],
       ["SAML at Clerk", "/authentication/saml-at-clerk"],
       "# Prebuilt Components",
-      ["<SignIn />", "https://clerk.com/docs/components/authentication/sign-in"],
-      ["<SignUp />", "https://clerk.com/docs/components/authentication/sign-up"],
+      [
+        "<SignIn />",
+        "https://clerk.com/docs/components/authentication/sign-in"
+      ],
+      [
+        "<SignUp />",
+        "https://clerk.com/docs/components/authentication/sign-up"
+      ],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
       [
@@ -67,7 +73,10 @@
           ["HubSpot", "/authentication/social-connections/hubspot"],
           ["Line", "/authentication/social-connections/line"],
           ["Linear", "/authentication/social-connections/linear"],
-          ["LinkedIn (Deprecated)", "/authentication/social-connections/linkedin"],
+          [
+            "LinkedIn (Deprecated)",
+            "/authentication/social-connections/linkedin"
+          ],
           ["LinkedIn", "/authentication/social-connections/linkedin-oidc"],
           ["Notion", "/authentication/social-connections/notion"],
           ["Slack", "/authentication/social-connections/slack"],
@@ -91,7 +100,10 @@
       ["Deleting users", "/users/deleting-users"],
       "# Prebuilt Components",
       ["<UserButton />", "https://clerk.com/docs/components/user/user-button"],
-      ["<UserProfile />", "https://clerk.com/docs/components/user/user-profile"],
+      [
+        "<UserProfile />",
+        "https://clerk.com/docs/components/user/user-profile"
+      ],
       "# Guides",
       ["Sync Clerk data to your backend with webhooks", "/users/sync-data"],
       ["Web3 authentication", "/users/web3"]
@@ -102,10 +114,22 @@
     [
       ["Overview", "/organizations/overview"],
       "# Prebuilt Components",
-      ["<CreateOrganization />", "https://clerk.com/docs/components/organization/create-organization"],
-      ["<OrganizationProfile />", "https://clerk.com/docs/components/organization/organization-profile"],
-      ["<OrganizationSwitcher />", "https://clerk.com/docs/components/organization/organization-switcher"],
-      ["<OrganizationList />", "https://clerk.com/docs/components/organization/organization-list"],
+      [
+        "<CreateOrganization />",
+        "https://clerk.com/docs/components/organization/create-organization"
+      ],
+      [
+        "<OrganizationProfile />",
+        "https://clerk.com/docs/components/organization/organization-profile"
+      ],
+      [
+        "<OrganizationSwitcher />",
+        "https://clerk.com/docs/components/organization/organization-switcher"
+      ],
+      [
+        "<OrganizationList />",
+        "https://clerk.com/docs/components/organization/organization-list"
+      ],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
@@ -158,8 +182,8 @@
       "# Advanced Usage",
       ["Custom redirects", "/account-portal/custom-redirects"],
       ["Direct links", "/account-portal/direct-links"],
-      ["User & Organization Pages","/account-portal/user-profile-org-profile"],
-      ["Disable Account Portal","/account-portal/disable-account-portal"]
+      ["User & Organization Pages", "/account-portal/user-profile-org-profile"],
+      ["Disable Account Portal", "/account-portal/disable-account-portal"]
     ]
   ],
   [
@@ -180,7 +204,10 @@
       ["<UserProfile />", "/components/user/user-profile"],
 
       "# Organization Components",
-      ["<CreateOrganization />", "/components/organization/create-organization"],
+      [
+        "<CreateOrganization />",
+        "/components/organization/create-organization"
+      ],
       [
         "<OrganizationProfile />",
         "/components/organization/organization-profile"
@@ -189,10 +216,7 @@
         "<OrganizationSwitcher />",
         "/components/organization/organization-switcher"
       ],
-      [
-        "<OrganizationList />",
-        "/components/organization/organization-list"
-      ],
+      ["<OrganizationList />", "/components/organization/organization-list"],
 
       "# Customization",
       [
@@ -209,7 +233,10 @@
         { "title": "Custom Pages" },
         [
           ["<UserProfile />", "/components/customization/user-profile"],
-          ["<OrganizationProfile />", "/components/customization/organization-profile"]
+          [
+            "<OrganizationProfile />",
+            "/components/customization/organization-profile"
+          ]
         ]
       ],
       "# Control Components",
@@ -341,7 +368,10 @@
       ["Email Deliverability", "/troubleshooting/email-deliverability"],
       ["Script Loading", "/troubleshooting/script-loading"],
       "# Help & Support",
-      ["Create a minimal reproduction", "/troubleshooting/create-a-minimal-reproduction"],
+      [
+        "Create a minimal reproduction",
+        "/troubleshooting/create-a-minimal-reproduction"
+      ],
       ["Community Discord", "https://clerk.com/discord"],
       ["Contact Support", "https://clerk.com/support"]
     ]
@@ -354,7 +384,10 @@
     },
     [
       ["API Key Changes", "/upgrade-guides/api-keys"],
-      ["URL-based session syncing", "/upgrade-guides/url-based-session-syncing"],
+      [
+        "URL-based session syncing",
+        "/upgrade-guides/url-based-session-syncing"
+      ],
       ["Progressive Sign up", "/upgrade-guides/progressive-sign-up"],
       "# Upgrade to V3",
       ["Introduction", "/upgrade-guides/v3-introduction"],
@@ -380,16 +413,28 @@
       [
         "Vulnerability disclosure policy",
         "/security/vulnerability-disclosure-policy"
-      ],      
+      ],
       ["XSS leak protection", "/security/xss-leak-protection"],
       ["CSRF protection", "/security/csrf-protection"],
       ["Fixation protection", "/security/fixation-protection"],
       ["Password protection and rules", "/security/password-protection"],
       "# Protect accounts from attacks",
-      ["Brute force attacks and locking user accounts","/security/user-lock-guide"],
-      ["Customize max login attempts and duration of of user lockout", "/security/customize-user-lockout"],
-      ["Unlock accounts from the Clerk Dashboard", "/security/unlock-user-accounts"],
-      ["Programmatically lock and unlock accounts", "/security/programmatically-lock-user-accounts"]
+      [
+        "Brute force attacks and locking user accounts",
+        "/security/user-lock-guide"
+      ],
+      [
+        "Customize max login attempts and duration of of user lockout",
+        "/security/customize-user-lockout"
+      ],
+      [
+        "Unlock accounts from the Clerk Dashboard",
+        "/security/unlock-user-accounts"
+      ],
+      [
+        "Programmatically lock and unlock accounts",
+        "/security/programmatically-lock-user-accounts"
+      ]
     ]
   ],
   "# SDK References",
@@ -399,7 +444,10 @@
       ["Overview", "/references/nextjs/overview"],
       "# Guides",
       ["Read session and user data", "/references/nextjs/read-session-data"],
-      ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
+      [
+        "Add custom sign up and sign in pages",
+        "/references/nextjs/custom-signup-signin-pages"
+      ],
       ["Integrate Clerk into your app with tRPC", "/references/nextjs/trpc"],
       "# App Router References",
       ["auth()", "/references/nextjs/auth"],
@@ -492,7 +540,10 @@
           ["Members", "/references/javascript/organization/members"],
           ["Invitations", "/references/javascript/organization/invitations"],
           ["Domains", "/references/javascript/organization/domains"],
-          ["Membership Requests", "/references/javascript/organization/membership-request"]
+          [
+            "Membership Requests",
+            "/references/javascript/organization/membership-request"
+          ]
         ]
       ],
       [
@@ -503,10 +554,7 @@
         "Organization Membership",
         "/references/javascript/organization-membership"
       ],
-      [
-        "Organization Domain",
-        "/references/javascript/organization-domain"
-      ],
+      ["Organization Domain", "/references/javascript/organization-domain"],
       [
         "Organization Membership Request",
         "/references/javascript/organization-membership-request"
@@ -584,15 +632,30 @@
         [
           ["PublicUserData", "/references/javascript/types/public-user-data"],
           ["RedirectOptions", "/references/javascript/types/redirect-options"],
-          ["SignInRedirectOptions", "/references/javascript/types/sign-in-redirect-options"],
-          ["SignUpRedirectOptions", "/references/javascript/types/sign-up-redirect-options"],
-          ["SignInInitialValues", "/references/javascript/types/sign-in-initial-values"],
-          ["SignUpInitialValues", "/references/javascript/types/sign-up-initial-values"],
+          [
+            "SignInRedirectOptions",
+            "/references/javascript/types/sign-in-redirect-options"
+          ],
+          [
+            "SignUpRedirectOptions",
+            "/references/javascript/types/sign-up-redirect-options"
+          ],
+          [
+            "SignInInitialValues",
+            "/references/javascript/types/sign-in-initial-values"
+          ],
+          [
+            "SignUpInitialValues",
+            "/references/javascript/types/sign-up-initial-values"
+          ],
           ["MagicLinkError", "/references/javascript/types/magic-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
-          ["PaginatedResponse", "/references/javascript/types/paginated-response"],
+          [
+            "PaginatedResponse",
+            "/references/javascript/types/paginated-response"
+          ],
           ["CustomPage", "/references/javascript/types/custom-page"]
         ]
       ]
@@ -608,10 +671,7 @@
       ["Overview", "references/nodejs/overview"],
       ["Available methods", "references/backend/overview"],
       ["Connect/Express Middleware", "/docs/backend-requests/handling/nodejs"],
-      [
-        "Networkless token verification",
-        "references/nodejs/token-verification"
-      ]
+      ["Networkless token verification", "references/nodejs/token-verification"]
     ]
   ],
   [
@@ -622,7 +682,7 @@
     },
     [
       ["<ClerkApp />", "references/remix/clerk-app"],
-      ["ClerkCatchBoundary()", "references/remix/clerk-catch-boundary"]
+      ["ClerkErrorBoundary()", "references/remix/clerk-error-boundary"]
     ]
   ],
   [
@@ -666,9 +726,7 @@
       "root": "references/redwood",
       "tag": "Community"
     },
-    [
-      ["Redwood", "https://redwoodjs.com/docs/auth/clerk"]
-    ]
+    [["Redwood", "https://redwoodjs.com/docs/auth/clerk"]]
   ],
   [
     {
@@ -677,9 +735,7 @@
       "root": "references/svelte",
       "tag": "Community"
     },
-    [
-      ["Svelte", "https://github.com/markjaquith/clerk-sveltekit"]
-    ]
+    [["Svelte", "https://github.com/markjaquith/clerk-sveltekit"]]
   ],
   [
     {
@@ -688,9 +744,7 @@
       "root": "references/vue",
       "tag": "Community"
     },
-    [
-      ["Vue", "https://vue-clerk.vercel.app/"]
-    ]
+    [["Vue", "https://vue-clerk.vercel.app/"]]
   ],
   [
     {
@@ -699,9 +753,7 @@
       "root": "references/elysia",
       "tag": "Community"
     },
-    [
-      ["Elysia", "https://github.com/wobsoriano/elysia-clerk"]
-    ]
+    [["Elysia", "https://github.com/wobsoriano/elysia-clerk"]]
   ],
   [
     {
@@ -710,9 +762,7 @@
       "root": "references/rust",
       "tag": "Community"
     },
-    [
-      ["Rust", "https://github.com/cincinnati-ventures/clerk-rs"]
-    ]
+    [["Rust", "https://github.com/cincinnati-ventures/clerk-rs"]]
   ],
   [
     {
@@ -722,7 +772,10 @@
       "tag": "Community"
     },
     [
-      ["Hono", "https://github.com/honojs/middleware/tree/main/packages/clerk-auth"]
+      [
+        "Hono",
+        "https://github.com/honojs/middleware/tree/main/packages/clerk-auth"
+      ]
     ]
   ],
   "# API References",
@@ -825,7 +878,10 @@
           ["getSession()", "/references/backend/sessions/get-session"],
           ["getSessionList()", "/references/backend/sessions/get-session-list"],
           ["getToken()", "/references/backend/sessions/get-token"],
-          ["authenticateRequest()", "/references/backend/sessions/authenticate-request"],
+          [
+            "authenticateRequest()",
+            "/references/backend/sessions/authenticate-request"
+          ],
           ["verifySession()", "/references/backend/sessions/verify-session"],
           ["revokeSession()", "/references/backend/sessions/revoke-session"]
         ]
