one comma to rule them all

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -110,7 +110,7 @@
       ["<Protect />", "/components/protect"],
       "# Guides",
       ["Create custom roles and assign permissions with Clerk", "/roles-permissions/create-roles-permissions"],
-      ["Use custom permissions to show and hide content from users", "/roles-permissions/permissions-show-hide-content"]
+      ["Use custom permissions to show and hide content from users", "/roles-permissions/permissions-show-hide-content"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
