feat: Add link to FAPI API docs
Added a link pointing to the Redocly FAPI openapi documentation.
The Clerk Marketing Site will reverse proxy this URL back to Redocly.
This is an absolute URL since reverse proxying will only work in
production.

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -872,4 +872,5 @@
     ]
   ],
   ["Backend API", "https://clerk.com/docs/reference/backend-api"]
+  ["Frontend API", "https://clerk.com/docs/reference/frontend-api"]
 ]
