--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -109,8 +109,9 @@
       ["<OrganizationList />", "/components/organization/organization-list"],
       ["<Protect />", "/components/protect"],
       "# Guides",
-      ["Create custom roles and assign permissions with Clerk", "/roles-permissions/create-roles-permissions"],
-      ["Use custom permissions to show and hide content from users", "/roles-permissions/permissions-show-hide-content"],
+      ["Create custom roles and assign permissions with Clerk", "/organizations/create-roles-permissions"],
+      ["Use custom permissions to show and hide content from users", "/organizations/permissions-show-hide-content"],
+      ["Reassign the Creator Role", "/organizations/creator-role"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
