--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -98,7 +98,7 @@
     ]
   ],
   [
-    { "title": "Organizations, Roles, and Permisions", "icon": "user-group", "root": "organizations" },
+    { "title": "Organizations, Roles, and Permissions", "icon": "user-group", "root": "organizations" },
     [
       ["Overview", "/organizations/overview"],
       ["Roles and Permissions", "/organizations/roles-permissions"],
