updating the protect component

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -103,11 +103,11 @@
       ["Overview", "/organizations/overview"],
       ["Roles and Permissions", "/organizations/roles-permissions"],
       "# Prebuilt Components",
-      ["<CreateOrganization />", "/components/organization/create-organization"],
-      ["<OrganizationProfile />", "/components/organization/organization-profile"],
-      ["<OrganizationSwitcher />", "/components/organization/organization-switcher"],
-      ["<OrganizationList />", "/components/organization/organization-list"],
-      ["<Protect />", "/components/protect"],
+      ["<CreateOrganization />", "https://clerk.com/docs/components/organization/create-organization"],
+      ["<OrganizationProfile />", "https://clerk.com/docs/components/organization/organization-profile"],
+      ["<OrganizationSwitcher />", "https://clerk.com/docs/components/organization/organization-switcher"],
+      ["<OrganizationList />", "https://clerk.com/docs/components/organization/organization-list"],
+      ["<Protect />", "https://clerk.com/docs/components/protect"],
       "# Guides",
       ["Create custom roles and assign permissions with Clerk", "/organizations/create-roles-permissions"],
       ["Use custom permissions to show and hide content from users", "/organizations/permissions-show-hide-content"],
@@ -225,7 +225,7 @@
       ],
       ["<ClerkLoaded />", "/components/control/clerk-loaded"],
       ["<ClerkLoading />", "/components/control/clerk-loading"],
-      ["<Gate />", "/components/roles-permissions/gate"],
+      ["<Protect />", "/components/protect"],
       ["<MultisessionAppSupport />", "/components/control/multi-session"],
       ["<RedirectToSignIn />", "/components/control/redirect-to-signin"],
       ["<RedirectToSignUp />", "/components/control/redirect-to-signup"],
