fix: update remix docs from catch boundary to error boundary (#533)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -622,7 +622,7 @@
     },
     [
       ["<ClerkApp />", "references/remix/clerk-app"],
-      ["ClerkCatchBoundary()", "references/remix/clerk-catch-boundary"]
+      ["ClerkErrorBoundary()", "references/remix/clerk-error-boundary"]
     ]
   ],
   [
