rewrite import/export to just be export

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -303,9 +303,10 @@
       ["Deploy to Vercel", "/deployments/deploy-to-vercel"],
       ["Changing domains", "/deployments/changing-domains"],
       "# Migrations",
-      ["Overview", "/deployments/migrate-overview"],
-      ["Import and export users", "/deployments/import-and-export-users"],
-      ["Migrate from Firebase", "/deployments/migrate-from-firebase"]
+      ["Migrate to Clerk", "/deployments/migrate-overview"],
+      ["Migrate from Firebase", "/deployments/migrate-from-firebase"],
+      ["Exporting user data", "/deployments/exporting-users"]
+
     ]
   ],
   [
