--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -402,6 +402,7 @@
       ["Read session and user data", "/references/nextjs/read-session-data"],
       ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
       ["Integrate Clerk into your app with tRPC", "/references/nextjs/trpc"],
+      ["Use Clerk with Next.js 12 and older", "/references/nextjs/usage-with-older-versions"],
       "# App Router References",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
