--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -110,7 +110,7 @@
       ["<Protect />", "https://clerk.com/docs/components/protect"],
       "# Guides",
       ["Create custom roles and assign permissions with Clerk", "/organizations/create-roles-permissions"],
-      ["Use custom permissions to show and hide content from users", "/organizations/permissions-show-hide-content"],
+      ["Restrict access with Permissions", "/organizations/permissions-show-hide-content"],
       ["Reassign the Creator Role", "/organizations/creator-role"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
