fix json syntax error

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -871,6 +871,6 @@
       ]
     ]
   ],
-  ["Backend API", "https://clerk.com/docs/reference/backend-api"]
+  ["Backend API", "https://clerk.com/docs/reference/backend-api"],
   ["Frontend API", "https://clerk.com/docs/reference/frontend-api"]
 ]
