Create Roles and assign Permissions updates

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -109,7 +109,7 @@
       ["<OrganizationList />", "https://clerk.com/docs/components/organization/organization-list"],
       ["<Protect />", "https://clerk.com/docs/components/protect"],
       "# Guides",
-      ["Create Roles and assign Permissions with Clerk", "/organizations/create-roles-permissions"],
+      ["Create Roles and assign Permissions", "/organizations/create-roles-permissions"],
       ["Restrict access with Permissions", "/organizations/restrict-access"],
       ["Reassign the Creator Role", "/organizations/creator-role"],
       "# Building custom flows",
