reordering examples and tweaking code

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -110,7 +110,7 @@
       ["<Protect />", "https://clerk.com/docs/components/protect"],
       "# Guides",
       ["Create Roles and assign Permissions", "/organizations/create-roles-permissions"],
-      ["Restrict access with Permissions", "/organizations/restrict-access"],
+      ["Verify the active user’s permissions", "/organizations/verify-user-permissions"],
       ["Reassign the Creator Role", "/organizations/creator-role"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
