set up eslint and vale

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "lint": "npm run lint:check-links",
     "format": "eslint --fix .",
-    "lint:check-links": "node ./scripts/check-links.mjs"
+    "lint:check-links": "node ./scripts/check-links.mjs",
+    "proselint": "vale docs/*/*/*/**.mdx",
+    "lint:mdx": "eslint docs/ --ext .mdx"
   },
   "devDependencies": {
-    "eslint-plugin-mdx": "^2.1.0",
+    "@ocular-d/vale-bin": "^2.29.6",
+    "eslint": "^8.55.0",
+    "eslint-plugin-mdx": "^2.2.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
     "readdirp": "^3.6.0",
