--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -101,17 +101,17 @@
     { "title": "Organizations, Roles, and Permissions", "icon": "user-group", "root": "organizations" },
     [
       ["Overview", "/organizations/overview"],
-      ["Roles and Permissions", "/organizations/roles-permissions"],
+      ["Roles and permissions", "/organizations/roles-permissions"],
       "# Prebuilt Components",
       ["<CreateOrganization />", "https://clerk.com/docs/components/organization/create-organization"],
       ["<OrganizationProfile />", "https://clerk.com/docs/components/organization/organization-profile"],
       ["<OrganizationSwitcher />", "https://clerk.com/docs/components/organization/organization-switcher"],
       ["<OrganizationList />", "https://clerk.com/docs/components/organization/organization-list"],
-      ["<Protect>", "https://clerk.com/docs/components/protect"],
+      ["<Protect />", "https://clerk.com/docs/components/protect"],
       "# Guides",
-      ["Create Roles and assign Permissions", "/organizations/create-roles-permissions"],
+      ["Create roles and assign permissions", "/organizations/create-roles-permissions"],
       ["Verify the active user’s permissions", "/organizations/verify-user-permissions"],
-      ["Reassign the Creator Role", "/organizations/creator-role"],
+      ["Reassign the creator role", "/organizations/creator-role"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
@@ -225,7 +225,7 @@
       ],
       ["<ClerkLoaded />", "/components/control/clerk-loaded"],
       ["<ClerkLoading />", "/components/control/clerk-loading"],
-      ["<Protect>", "/components/protect"],
+      ["<Protect />", "/components/protect"],
       ["<MultisessionAppSupport />", "/components/control/multi-session"],
       ["<RedirectToSignIn />", "/components/control/redirect-to-signin"],
       ["<RedirectToSignUp />", "/components/control/redirect-to-signup"],
