setting up frontmatter plugin

--- a/.remarkrc
+++ b/.remarkrc
@@ -3,6 +3,14 @@
     "preset-lint-consistent",
     "preset-lint-markdown-style-guide",
     "preset-lint-recommended",
-    "preset-prettier"
+    "preset-prettier",
+    "frontmatter",
+    ["remark-lint-frontmatter-schema", {
+      "schemas": {
+        "./schemas/docs.schema.yaml": [
+          "./docs/*.mdx"
+        ]
+      }
+    }]
   ]
 }
