--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "devDependencies": {
     "@ocular-d/vale-bin": "^2.29.6",
     "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mdx": "^2.2.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
     "readdirp": "^3.6.0",
     "remark": "^14.0.3",
+    "remark-frontmatter": "^5.0.0",
+    "remark-lint-frontmatter-schema": "^3.15.4",
     "remark-mdx": "^2.3.0",
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
