update syntax when referencing Protect component

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -107,7 +107,7 @@
       ["<OrganizationProfile />", "https://clerk.com/docs/components/organization/organization-profile"],
       ["<OrganizationSwitcher />", "https://clerk.com/docs/components/organization/organization-switcher"],
       ["<OrganizationList />", "https://clerk.com/docs/components/organization/organization-list"],
-      ["<Protect />", "https://clerk.com/docs/components/protect"],
+      ["<Protect>", "https://clerk.com/docs/components/protect"],
       "# Guides",
       ["Create roles and assign permissions", "/organizations/create-roles-permissions"],
       ["Verify the active user’s permissions", "/organizations/verify-user-permissions"],
@@ -225,7 +225,7 @@
       ],
       ["<ClerkLoaded />", "/components/control/clerk-loaded"],
       ["<ClerkLoading />", "/components/control/clerk-loading"],
-      ["<Protect />", "/components/protect"],
+      ["<Protect>", "/components/protect"],
       ["<MultisessionAppSupport />", "/components/control/multi-session"],
       ["<RedirectToSignIn />", "/components/control/redirect-to-signin"],
       ["<RedirectToSignUp />", "/components/control/redirect-to-signup"],
