--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -176,7 +176,7 @@
     },
     [
       ["Overview", "/components/overview"],
-      ["<ClerkProvider />", "/components/clerk-provider"],
+      ["<ClerkProvider>", "/components/clerk-provider"],
       "# Authentication Components",
       ["<SignIn />", "/components/authentication/sign-in"],
       ["<SignUp />", "/components/authentication/sign-up"],
@@ -223,10 +223,10 @@
         "<AuthenticateWithRedirectCallback />",
         "/components/control/authenticate-with-callback"
       ],
-      ["<ClerkLoaded />", "/components/control/clerk-loaded"],
-      ["<ClerkLoading />", "/components/control/clerk-loading"],
+      ["<ClerkLoaded>", "/components/control/clerk-loaded"],
+      ["<ClerkLoading>", "/components/control/clerk-loading"],
       ["<Protect>", "/components/protect"],
-      ["<MultisessionAppSupport />", "/components/control/multi-session"],
+      ["<MultisessionAppSupport>", "/components/control/multi-session"],
       ["<RedirectToSignIn />", "/components/control/redirect-to-signin"],
       ["<RedirectToSignUp />", "/components/control/redirect-to-signup"],
       [
@@ -241,16 +241,16 @@
         "<RedirectToCreateOrganization />",
         "/components/control/redirect-to-createorganization"
       ],
-      ["<SignedIn />", "/components/control/signed-in"],
-      ["<SignedOut />", "/components/control/signed-out"],
+      ["<SignedIn>", "/components/control/signed-in"],
+      ["<SignedOut>", "/components/control/signed-out"],
       "# Unstyled Components",
-      ["<SignInButton />", "/components/unstyled/sign-in-button"],
+      ["<SignInButton>", "/components/unstyled/sign-in-button"],
       [
-        "<SignInWithMetamaskButton />",
+        "<SignInWithMetamaskButton>",
         "/components/unstyled/sign-in-with-metamask"
       ],
-      ["<SignUpButton />", "/components/unstyled/sign-up-button"],
-      ["<SignOutButton />", "/components/unstyled/sign-out-button"]
+      ["<SignUpButton>", "/components/unstyled/sign-up-button"],
+      ["<SignOutButton>", "/components/unstyled/sign-out-button"]
     ]
   ],
   [
