Replace orgs references with organizations

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -114,12 +114,12 @@
       ["Reassign the Creator Role", "/organizations/creator-role"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
-      ["Creating orgs", "/organizations/creating-organizations"],
-      ["Updating orgs", "/organizations/updating-organizations"],
+      ["Creating organizations", "/organizations/creating-organizations"],
+      ["Updating organizations", "/organizations/updating-organizations"],
       ["Inviting users", "/organizations/inviting-users"],
       ["Managing roles", "/organizations/managing-roles"],
       ["Viewing memberships", "/organizations/viewing-memberships"],
-      ["Managing multiple orgs", "/organizations/multiple-orgs"],
+      ["Managing multiple organizations", "/organizations/multiple-orgs"],
       ["Verified domains", "/organizations/verified-domains"]
     ]
   ],
