--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "lint": "npm run lint:check-links",
+    "vale": "./node_modules/@vvago/vale/bin/vale",
     "format": "eslint --fix .",
     "lint:check-links": "node ./scripts/check-links.mjs",
-    "proselint": "vale docs/*/*/*/**.mdx",
+    "lint:prose": "npm run vale -- docs/ --no-wrap",
     "lint:mdx": "eslint docs/ --ext .mdx"
   },
   "devDependencies": {
-    "@ocular-d/vale-bin": "^2.29.6",
+    "@vvago/vale": "^2.30.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mdx": "^2.2.0",
