Fix minor stuff + add note to vale config

--- a/.remarkrc
+++ b/.remarkrc
@@ -7,7 +7,7 @@
     "frontmatter",
     ["remark-lint-frontmatter-schema", {
       "schemas": {
-        "./schemas/docs.schema.yaml": [
+        "./schemas/docs.schema.yml": [
           "./docs/*.mdx"
         ]
       }
