--- a/.vale.ini
+++ b/.vale.ini
@@ -1,13 +1,15 @@
 StylesPath = .vale/styles
 MinAlertLevel = suggestion
 
-Vocab = word_list 
+Vocab = word_list
 
 [formats]
 mdx = md
 
 [*]
+# If we want to enable spell checking and the allow/reject list, we have to do:
+# BasedOnStyles = Vale, Clerk
 BasedOnStyles = Clerk
-SkippedScopes = script, style, pre, figure, CodeSamples, ImageComp, RouteHighlighter
+SkippedScopes = script, style, pre, figure, Callout, CodeBlockTabs, InjectKeys
 BlockIgnores = (?s)(^---$.*^---$)
 TokenIgnores = (<\/?[A-Z].+>)
