--- a/.vale.ini
+++ b/.vale.ini
@@ -10,6 +10,8 @@ mdx = md
 # If we want to enable spell checking and the allow/reject list, we have to do:
 # BasedOnStyles = Vale, Clerk
 BasedOnStyles = Clerk
-SkippedScopes = script, style, pre, figure, Callout, CodeBlockTabs, InjectKeys
+IgnoredScopes = code, tt, img, url, a
+SkippedScopes = script, style, pre, figure, code, Callout, CodeBlockTabs, InjectKeys
 BlockIgnores = (?s)(^---$.*^---$)
-TokenIgnores = (<\/?[A-Z].+>)
+# Ignore code surrounded by backticks or plus sign, parameters defaults, URLs, and angle brackets.
+TokenIgnores = (<\/?[A-Z].+>), (\x60[^\n\x60]+\x60), ([^\n]+=[^\n]*), (\+[^\n]+\+), (http[^\n]+\[)
