--- a/.vale/styles/Clerk/Headings.yml
+++ b/.vale/styles/Clerk/Headings.yml
@@ -7,24 +7,37 @@ match: $sentence
 indicators:
   - ":"
 exceptions:
+  - '\b\s[0-9]:\s[A-Z]' # Step 1: Do this
+  - '[0-9]\.\s[A-Z]' # 1. Do this
+  - 'v[0-9][.][0-9]{1,2}' # e.g. v0.17
   - Azure
   - CLI
-  - Cosmos
   - Docker
-  - Emmet
   - gRPC
   - I
   - Kubernetes
   - Linux
   - macOS
-  - Marketplace
   - MongoDB
   - REPL
   - Studio
   - TypeScript
+  - JavaScript
   - URLs
   - Visual
   - VS
   - Windows
   - Clerk
   - TOTP
+  - Fastify
+  - Expo
+  - Remix
+  - OAuth
+  - Gatsby
+  - SSR
+  - React
+  - RedwoodJS
+  - Apple
+  - UI
+  - Cloudflare
+  - Slack
