--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "unist-util-visit": "^5.0.0",
     "vfile": "^6.0.1",
     "vfile-reporter": "^8.0.0"
+  },
+  "dependencies": {
+    "remark-frontmatter": "^5.0.0"
   }
 }
