--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -23,6 +23,16 @@
       ["Fastify", "/quickstarts/fastify"]
     ]
   ],
+  [
+    {
+      "title": "Guides",
+      "icon": "book-open",
+      "root": "guides"
+    },
+    [
+      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
+    ]
+  ],
   "---",
   [
     {
