Adding db syncing

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -83,7 +83,9 @@
       "# Manage users",
       ["Edit user information in the Clerk Dashboard", "guides/edit-user-info-clerk-dashboard"],
       ["Bulk manage users via Clerk Dashboard", "guides/bulk-manage-users-clerk-dashboard"],
-      ["Impersonate a user", "guides/impersonate-user"]
+      "# Manage and access user data in multiple places",
+      ["Associate user data across databases", "guides/associate-user-data-across-databases"],
+      ["Sync Clerk’s User data to your own database", "guides/sync-user-data"]
     ]
   ],
   "---",
