--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -9,7 +9,7 @@
     },
     [
       ["Overview", "/quickstarts/overview"],
-      ["Set up Clerk", "/quickstarts/setup-clerk"],
+      ["Set up Clerk", "/guides/setup-clerk"],
       "# Full Stack",
       ["Next.js", "/quickstarts/nextjs"],
       ["Remix", "/quickstarts/remix"],
@@ -40,7 +40,7 @@
       ["Customize your emails and SMS", "/guides/customize-communication"],
       ["Add a custom page to a user profile view", "/guides/customize-communication"],
       "# Add different authentication methods",
-      ["Add social auth to signup", "/guides/social-auth"],
+      ["Add social auth to signup", "/guides/add-social-auth"],
       ["Add SAML (sign domain sign-on)", "/guides/saml"],
       ["Link multiple accounts to one user", "/guides/link-accounts"],
       ["Create one-time codes", "/guides/one-time-codes"],
