moving how clerk works to concepts section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -23,6 +23,16 @@
       ["Fastify", "/quickstarts/fastify"]
     ]
   ],
+  [
+    {
+      "title": "Concepts",
+      "icon": "lightning-bolt",
+      "root": "concepts"
+    },
+    [
+      ["How Clerk Works", "/concepts/how-clerk-works"]
+    ]
+  ],
   "---",
   [
     {
