Initial push for actor token errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -340,6 +340,17 @@
   ],
   [
     {
+      "title": "Error Handling",
+      "icon": "support",
+      "root": "errors"
+    },
+    [
+      ["Overview", "/errors/overview"],
+      ["Actor tokens", "/errors/actor-tokens"]
+    ]
+  ],
+    [
+    {
       "title": "Troubleshooting",
       "icon": "support",
       "root": "troubleshooting"
