adding more about client handshake

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,7 +30,8 @@
       "root": "concepts"
     },
     [
-      ["How Clerk Works", "/concepts/how-clerk-works"]
+      ["How Clerk Works", "/concepts/how-clerk-works"],
+      ["Client Handshake", "/concepts/client-handshake"]
     ]
   ],
   "---",
