swap instance / env ordering

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -305,7 +305,7 @@
       "root": "deployments"
     },
     [
-      ["Environments / Instances", "/deployments/environments"],
+      ["Instances / Environments", "/deployments/environments"],
       "# Deployment",
       ["Deploy to production", "/deployments/overview"],
       ["Deploy to Vercel", "/deployments/deploy-to-vercel"],
