adds applications errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -346,7 +346,9 @@
     },
     [
       ["Overview", "/errors/overview"],
-      ["Actor tokens", "/errors/actor-tokens"]
+      ["Actor tokens", "/errors/actor-tokens"],
+      ["Allowlist Identifiers", "/errors/allowlist-identifiers"],
+      ["Applications", "/errors/applications"]
     ]
   ],
     [
