apply remark-lint-frontmatter-schema to all docs files

--- a/.remarkrc
+++ b/.remarkrc
@@ -8,7 +8,7 @@
     ["remark-lint-frontmatter-schema", {
       "schemas": {
         "./schemas/docs.schema.yml": [
-          "./docs/*.mdx"
+          "./docs/**/*.mdx"
         ]
       }
     }]
