add all linting scripts to 'lint' script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "lint": "npm run lint:check-links",
+    "lint": "npm run lint:check-links && npm run lint:prose && npm run lint:mdx",
     "vale": "./node_modules/@vvago/vale/bin/vale",
     "format": "eslint --fix .",
     "lint:check-links": "node ./scripts/check-links.mjs",
