--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -305,6 +305,7 @@
       "root": "deployments"
     },
     [
+      ["Instances / Environments", "/deployments/environments"],
       "# Deployment",
       ["Deploy to production", "/deployments/overview"],
       ["Deploy to Vercel", "/deployments/deploy-to-vercel"],
