adding auth errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -348,7 +348,8 @@
       ["Overview", "/errors/overview"],
       ["Actor tokens", "/errors/actor-tokens"],
       ["Allowlist Identifiers", "/errors/allowlist-identifiers"],
-      ["Applications", "/errors/applications"]
+      ["Applications", "/errors/applications"],
+      ["Auth", "/errors/auth"]
     ]
   ],
     [
