add backup code errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -347,9 +347,10 @@
     [
       ["Overview", "/errors/overview"],
       ["Actor tokens", "/errors/actor-tokens"],
-      ["Allowlist Identifiers", "/errors/allowlist-identifiers"],
+      ["Allowlist identifiers", "/errors/allowlist-identifiers"],
       ["Applications", "/errors/applications"],
-      ["Auth", "/errors/auth"]
+      ["Auth", "/errors/auth"],
+      ["Backup codes", "/errors/backup-codes"]
     ]
   ],
     [
