Adding billing errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -350,7 +350,8 @@
       ["Allowlist identifiers", "/errors/allowlist-identifiers"],
       ["Applications", "/errors/applications"],
       ["Auth", "/errors/auth"],
-      ["Backup codes", "/errors/backup-codes"]
+      ["Backup codes", "/errors/backup-codes"],
+      ["Billing", "/errors/billing"]
     ]
   ],
     [
