cleanup lint errors and sentence-style capitalization warnings

--- a/.vale/styles/Clerk/Headings.yml
+++ b/.vale/styles/Clerk/Headings.yml
@@ -15,6 +15,12 @@ exceptions:
   - Docker
   - gRPC
   - I
+  - IP
+  - ID
+  - SPF
+  - DKIM
+  - DMARC
+  - Microsoft (Hotmail / Outlook / Office365)
   - Kubernetes
   - Linux
   - macOS
@@ -28,6 +34,7 @@ exceptions:
   - VS
   - Windows
   - Clerk
+  - Next.js
   - TOTP
   - Fastify
   - Expo
@@ -41,3 +48,107 @@ exceptions:
   - UI
   - Cloudflare
   - Slack
+  - CSRF
+  - XSS
+  - HttpOnly
+  - SameSite
+  - Account Lockout
+  - SMS
+  - SDK
+  - Backend
+  - Allowlist Identifiers
+  - Route Handlers
+  - Middleware
+  - Organization Domains
+  - Organization Members
+  - Organization Membership
+  - Organization Invitations
+  - Organization Invitation
+  - User & Organization Pages
+  - User Profile
+  - Organization Profile
+  - Create Organization
+  - AuthenticateWith
+  - tRPC
+  - ClerkJS
+  - React
+  - Ruby
+  - Rack/Rails
+  - Frontend
+  - API
+  - APIs
+  - URL
+  - Account Portal
+  - Fauna
+  - Grafbase
+  - Supabase
+  - Nhost
+  - GraphQL
+  - Hasura
+  - Hasura Cloud
+  - Hasura Core
+  - Firebase Web SDK
+  - Google Analytics
+  - Universal Analytics
+  - Cypress
+  - CSS Modules
+  - CSS
+  - Progressive Sign Up
+  - Rack and Rails
+  - Gatsby Functions
+  - Signing Secret
+  - Web3
+  - Go
+  - Connect/Express
+  - JWT
+  - Fetch
+  - useSWR
+  - Tanstack Query (React Query)
+  - React Router
+  - Postman
+  - Insomnia
+  - Clerk Dashboard
+  - SAML
+  - OAuth
+  - React Native
+  - Expo
+  - OTP
+  - User Impersonation
+  - HTML
+  - Dropbox
+  - Bitbucket
+  - GitLab
+  - FAQ
+  - GitHub
+  - HubSpot
+  - Microsoft
+  - Xero
+  - Notion
+  - OAuth Access Token Wallet
+  - Box
+  - OpenID Connect
+  - Spotify
+  - Facebook
+  - LINE
+  - Coinbase
+  - Atlassian
+  - Google
+  - Convex
+  - Twitch
+  - Linear
+  - LinkedIn
+  - Account Linking
+  - Twitter
+  - Node
+  - DNS
+  - Apple Team ID
+  - Apple Services ID
+  - Apple Key ID
+  - Cloudflare
+  - Edge
+  - Microsoft (Hotmail / Outlook / Office365)
+  - App Router
+  - Pages Router
+  - Server Action
+  - Server Page
+  - Server Actions
