--- a/.vale/styles/Clerk/FirstPerson.yml
+++ b/.vale/styles/Clerk/FirstPerson.yml
@@ -1,3 +1,4 @@
+# We want to avoid using singular first person pronouns
 extends: existence
 message: "Avoid first-person pronouns such as '%s' unless writing FAQs"
 link: "https://developers.google.com/style/pronouns#personal-pronouns"
