Linting improvements (for #563) (#570)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/.remarkrc
+++ b/.remarkrc
@@ -7,8 +7,8 @@
     "frontmatter",
     ["remark-lint-frontmatter-schema", {
       "schemas": {
-        "./schemas/docs.schema.yaml": [
-          "./docs/*.mdx"
+        "./schemas/docs.schema.yml": [
+          "./docs/**/*.mdx"
         ]
       }
     }]
