--- a/.vale/styles/Clerk/Gender.yml
+++ b/.vale/styles/Clerk/Gender.yml
@@ -1,3 +1,4 @@
+# We want to enforce the use of gender-neutral pronouns
 extends: existence
 message: "Don't use '%s' as a gender-neutral pronoun."
 link: "https://developers.google.com/style/pronouns#gender-neutral-pronouns"
