--- a/.vale/styles/Clerk/We.yml
+++ b/.vale/styles/Clerk/We.yml
@@ -1,3 +1,4 @@
+# We want to avoid using plural first-person pronouns
 extends: existence
 message: "Try to avoid using first-person plural like '%s'."
 link: "https://developers.google.com/style/pronouns#personal-pronouns"
