updating sequence of guides

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -55,6 +55,9 @@
       "# Grant access to content based on logged in status",
       ["Gate content access based on login/out status", "guides/access-by-login-out"],
       ["Grant granular access based on login/out status", "guides/granular-access-by-login-out"],
+      "# Manage and access user data in multiple places",
+      ["Associate user data across databases", "guides/associate-user-data-across-databases"],
+      ["Sync Clerk’s User data to your own database", "guides/sync-user-data"],
       "# Organize users across properties with orgs",
       ["Different strategies for using orgs", "guides/organization-strategies"],
       ["Add multitenancy with an organization", "guides/multitenancy-organization"],
@@ -82,10 +85,7 @@
       ["Sign users out of other devices/browsers", "guides/sign-users-out-devices-browsers"],
       "# Manage users",
       ["Edit user information in the Clerk Dashboard", "guides/edit-user-info-clerk-dashboard"],
-      ["Bulk manage users via Clerk Dashboard", "guides/bulk-manage-users-clerk-dashboard"],
-      "# Manage and access user data in multiple places",
-      ["Associate user data across databases", "guides/associate-user-data-across-databases"],
-      ["Sync Clerk’s User data to your own database", "guides/sync-user-data"]
+      ["Bulk manage users via Clerk Dashboard", "guides/bulk-manage-users-clerk-dashboard"]
     ]
   ],
   "---",
