moving RBAC into scaffold

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -30,7 +30,60 @@
       "root": "guides"
     },
     [
-      ["Implement basic Role Based Access Control with metadata", "/guides/basic-rbac"]
+      ["Overview", "/guides/overview"],
+      "# Get set up",
+      ["Set up Clerk", "/guides/setup-clerk"],
+      ["Set up your environments", "/guides/setup-environments"],
+      "# Add auth to your app",
+      ["Add a sign up/sign in form to your app with components", "/guides/add-auth-to-app"],
+      ["Theme your signin/signup form", "/guides/theme-signup-form"],
+      ["Customize your emails and SMS", "/guides/customize-communication"],
+      ["Add a custom page to a user profile view", "/guides/customize-communication"],
+      "# Add different authentication methods",
+      ["Add social auth to signup", "/guides/social-auth"],
+      ["Add SAML (sign domain sign-on)", "/guides/saml"],
+      ["Link multiple accounts to one user", "/guides/link-accounts"],
+      ["Create one-time codes", "/guides/one-time-codes"],
+      ["Create magic links", "/guides/magic-links"],
+      ["Turn on SMS verification", "/guides/sms-verification"],
+      ["Add MFA to signin", "/guides/mfa"],      
+      ["Turn on one-time-code as MFA", "/guides/mfa-one-time-code"],
+      ["Enable people to sign into more than one account at a time", "/guides/mult-session"],
+      ["Enable people to sign into more than one account at a time", "/guides/multi-session"],
+      ["Create and manage SAML SSO connections", "/guides/saml-sso"],
+      ["Add an OAuth/MFA account to user profiles", "guides/oauth-mfa"],
+      "# Grant access to content based on logged in status",
+      ["Gate content access based on login/out status", "guides/access-by-login-out"],
+      ["Grant granular access based on login/out status", "guides/granular-access-by-login-out"],
+      "# Organize users across properties with orgs",
+      ["Different strategies for using orgs", "guides/organization-strategies"],
+      ["Add multitenancy with an organization", "guides/multitenancy-organization"],
+      ["Grant permissions with roles", "guides/grant-permissions-roles"],
+      ["Run your application on multiple domains", "guides/multiple-domains"],
+      ["Link an organization to one or more domains", "guides/link-org-multiple-domains"],
+      ["Impersonate a user", "guides/impersonate-a-user"],
+      ["Switch organizations with the org switcher", "guides/org-switcher"],
+      ["Add a custom page to an organization view", "guides/org-view-custom-page"],
+      "# Grant access to content based on permissions and roles",
+      ["Grant permissions", "guides/grant-permissions"],
+      ["Gate content access based on permissions", "guides/access-by-permissions"],
+      ["Grant granular access based on permissions", "guides/granular-access-by-login-out"],
+      ["Implement RBAC programmatically with metadata", "/guides/basic-rbac"],
+      "# Implement your own custom authentication forms and controls",
+      ["Implement a custom form with Clerk's SDKs and APIs", "guides/custom-form-sdks-apis"],
+      ["Integrate Clerk with a multi-page onboarding flow", "guides/multi-page"],
+      ["Collect personal information from sign-in form", "guides/collect-info-from-form"],
+      ["How to use Clerk client as a wrapper", "guides/use-clerk-client-wrapper"],
+      "# Security, Privacy, and Moderation",
+      ["How to prevent brute force attacks", "guides/prevent-attacks"],
+      ["Add emails to an allow-list", "guides/allow-list-emails"],
+      ["Add emails to a block-list", "guides/block-list-emails"],
+      ["Revoke user sessions", "guides/revoke-sessions"],
+      ["Sign users out of other devices/browsers", "guides/sign-users-out-devices-browsers"],
+      "# Manage users",
+      ["Edit user information in the Clerk Dashboard", "guides/edit-user-info-clerk-dashboard"],
+      ["Bulk manage users via Clerk Dashboard", "guides/bulk-manage-users-clerk-dashboard"],
+      ["Impersonate a user", "guides/impersonate-user"]
     ]
   ],
   "---",
