Adding billing account errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -351,7 +351,8 @@
       ["Applications", "/errors/applications"],
       ["Auth", "/errors/auth"],
       ["Backup codes", "/errors/backup-codes"],
-      ["Billing", "/errors/billing"]
+      ["Billing", "/errors/billing"],
+      ["Billing accounts", "/errors/billing-accounts"]
     ]
   ],
     [
