adding blocklist identifiers errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -352,7 +352,8 @@
       ["Auth", "/errors/auth"],
       ["Backup codes", "/errors/backup-codes"],
       ["Billing", "/errors/billing"],
-      ["Billing accounts", "/errors/billing-accounts"]
+      ["Billing accounts", "/errors/billing-accounts"],
+      ["Blocklist identifiers", "/errors/blocklist-identifiers"]
     ]
   ],
     [
