adding clients errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -353,7 +353,8 @@
       ["Backup codes", "/errors/backup-codes"],
       ["Billing", "/errors/billing"],
       ["Billing accounts", "/errors/billing-accounts"],
-      ["Blocklist identifiers", "/errors/blocklist-identifiers"]
+      ["Blocklist identifiers", "/errors/blocklist-identifiers"],
+      ["Clients", "/errors/clients"]
     ]
   ],
     [
