--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -354,7 +354,8 @@
       ["Billing", "/errors/billing"],
       ["Billing accounts", "/errors/billing-accounts"],
       ["Blocklist identifiers", "/errors/blocklist-identifiers"],
-      ["Clients", "/errors/clients"]
+      ["Clients", "/errors/clients"],
+      ["Comms", "/errors/comms"]
     ]
   ],
     [
