--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -355,7 +355,8 @@
       ["Billing accounts", "/errors/billing-accounts"],
       ["Blocklist identifiers", "/errors/blocklist-identifiers"],
       ["Clients", "/errors/clients"],
-      ["Comms", "/errors/comms"]
+      ["Comms", "/errors/comms"],
+      ["Cookie", "/errors/cookie"]
     ]
   ],
     [
