adding db errors

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -356,7 +356,8 @@
       ["Blocklist identifiers", "/errors/blocklist-identifiers"],
       ["Clients", "/errors/clients"],
       ["Comms", "/errors/comms"],
-      ["Cookie", "/errors/cookie"]
+      ["Cookie", "/errors/cookie"],
+      ["DB", "/errors/db"]
     ]
   ],
     [
